feat: add frontend config and app
