# src/template/application/mappers/template-response.mapper.ts
@@ -1,4 +1,5 @@
 import { CreateTemplateResponseDto } from '@/template/application/dto/create-template-response.dto';
+import { TemplateSummaryResponseDto } from '@/template/application/dto/template-summary-response.dto';
 import { TemplateVersionResponseDto } from '@/template/application/dto/template-version-response.dto';
 import { TemplateWithVersionResponseDto } from '@/template/application/dto/template-with-version-response.dto';
 import { VariableResponseDto } from '@/template/application/dto/variable-response.dto';
@@ -6,7 +7,9 @@ import { TemplateVersion } from '@/template/domain/entities/template-version.ent
 import { Template } from '@/template/domain/entities/template.entity';
 
 export class TemplateResponseMapper {
-  static toCreateTemplateResponse(template: Template): CreateTemplateResponseDto {
+  static toCreateTemplateResponse(
+    template: Template,
+  ): CreateTemplateResponseDto {
     return new CreateTemplateResponseDto(
       template.id,
       template.name,
@@ -16,7 +19,21 @@ export class TemplateResponseMapper {
     );
   }
 
-  static toTemplateWithVersionResponse(template: Template): TemplateWithVersionResponseDto {
+  static toTemplateSummaryResponse(
+    template: Template,
+  ): TemplateSummaryResponseDto {
+    return new TemplateSummaryResponseDto(
+      template.id,
+      template.name,
+      [...template.tags],
+      template.currentVersion,
+      template.createdAt.toISOString(),
+    );
+  }
+
+  static toTemplateWithVersionResponse(
+    template: Template,
+  ): TemplateWithVersionResponseDto {
     const variables = template.variables.map(
       (v) => new VariableResponseDto(v.id, v.name, v.defaultValue),
     );
@@ -31,7 +48,9 @@ export class TemplateResponseMapper {
     );
   }
 
-  static toTemplateVersionResponse(version: TemplateVersion): TemplateVersionResponseDto {
+  static toTemplateVersionResponse(
+    version: TemplateVersion,
+  ): TemplateVersionResponseDto {
     const variables = version.variables.map(
       (v) => new VariableResponseDto(v.id, v.name, v.defaultValue),
     );
